--- a/app.json
+++ b/app.json
@@ -28,6 +28,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "4bc3e4c0-40aa-4fac-a5cc-f470472171d8"
+      }
     }
   }
 }
