--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@shopify/flash-list": "1.4.3",
     "expo": "~49.0.15",
+    "expo-blur": "~12.4.1",
+    "expo-dev-client": "~2.4.12",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -24,9 +27,7 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-size-matters": "^0.4.2",
-    "@shopify/flash-list": "1.4.3",
-    "expo-dev-client": "~2.4.12"
+    "react-native-size-matters": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
