--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~49.0.15",
     "expo-blur": "~12.4.1",
     "expo-dev-client": "~2.4.12",
+    "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -27,6 +28,7 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-size-matters": "^0.4.2"
   },
   "devDependencies": {
