--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -19,6 +20,7 @@
     "expo": "~49.0.15",
     "expo-blur": "~12.4.1",
     "expo-dev-client": "~2.4.12",
+    "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "lodash": "^4.17.21",
@@ -33,7 +35,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-size-matters": "^0.4.2",
-    "react-native-skeleton-placeholder": "^5.2.4"
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-text-ticker": "^1.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
