--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -18,26 +19,31 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@shopify/flash-list": "1.4.3",
-    "expo": "~49.0.15",
+    "expo": "^49.0.21",
     "expo-blur": "~12.4.1",
+    "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.12",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
+    "expo-screen-orientation": "~6.0.6",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "^2.6.0",
     "lodash": "^4.17.21",
     "moti": "^0.27.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-size-matters": "^0.4.2",
     "react-native-skeleton-placeholder": "^5.2.4",
-    "react-native-text-ticker": "^1.14.0"
+    "react-native-text-ticker": "^1.14.0",
+    "react-native-video": "^5.2.1",
+    "sharp-cli": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
